Use trunk_deps_repository, not trunk_repository_deps

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -58,7 +58,7 @@
     - { key: "kolla_git_revision", value: "{{ kolla_git_revision }}" }
     - { key: "version_hash", value: "{{ version_hash }}" }
     - { key: "trunk_repository", value: "{{ trunk_repository }}", type: "url" }
-    - { key: "trunk_repository_deps", value: "{{ trunk_repository_deps }}", type: "url" }
+    - { key: "trunk_deps_repository", value: "{{ trunk_deps_repository }}", type: "url" }
     - { key: "build_id", value: "{{ build_id }}" }
     - { key: "kolla_rdo_images", value: "{{ kolla_rdo_images }}" }
   ignore_errors: "yes"
