Provides ACL and Groups

--- a/project.config
+++ b/project.config
@@ -1,4 +1,23 @@
-[access]
-	inheritFrom = All-Projects
+[project]
+	description = 
 [access "refs/*"]
-	owner = group rdo-infra/ansible-role-rdo-kolla-build-ptl
+  read = group rdo-infra/ansible-role-rdo-kolla-build-core
+  owner = group rdo-infra/ansible-role-rdo-kolla-build-ptl
+[access "refs/heads/*"]
+	label-Code-Review = -2..+2 group rdo-infra/ansible-role-rdo-kolla-build-core
+	label-Code-Review = -2..+2 group rdo-infra/ansible-role-rdo-kolla-build-ptl
+	label-Verified = -2..+2 group rdo-infra/ansible-role-rdo-kolla-build-ptl
+	label-Workflow = -1..+1 group rdo-infra/ansible-role-rdo-kolla-build-core
+	label-Workflow = -1..+1 group rdo-infra/ansible-role-rdo-kolla-build-ptl
+	label-Workflow = -1..+0 group Registered Users
+	submit = group rdo-infra/ansible-role-rdo-kolla-build-ptl
+	read = group rdo-infra/ansible-role-rdo-kolla-build-core
+    read = group Registered Users
+[access "refs/meta/config"]
+    read = group rdo-infra/ansible-role-rdo-kolla-build-core
+    read = group Registered Users
+[receive]
+	requireChangeId = true
+[submit]
+	mergeContent = false
+	action = fast forward only
