Add ansible_python_interpreter var to package tasks
The role could be running from a virtualenv and therefore the
yum python module might not be carried over to the virtualenv
site packages.

Change-Id: I587a5685eb57a67696a0719189a6344ce72331fc

--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -60,6 +60,8 @@
 
 # python-docker-py is required so we can leverage Ansible docker modules
 - name: Install docker and docker-py
+  vars:
+    ansible_python_interpreter: "/usr/bin/python"
   package:
     name: "{{ item }}"
     state: "present"
