Default push to false, adjust setup and push tags on the proper tasks
- Remove the setup tag for Docker tasks only required when pushing
- Move the push tag to task-level, it doesn't look like it works
  for blocks

Change-Id: I798f1fdf2ab5fa9e885b715da0e77aa7761f2032

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -41,7 +41,7 @@ kolla_timeout: 120
 # This doesn't actually configure the kolla-build to push, we're pushing
 # ourselves in order to be able to, if need be, build and push separately.
 kolla_build: true
-kolla_push: true
+kolla_push: false
 
 # Kolla doesn't know out of the box which images are supported for a given
 # operating system (ex: CentOS) and type (ex: Binary).
