Install kolla from RPM, not git
The openstack-kolla package now exists so a binary install can become
the default instead of source.

Change-Id: I2dad8c024aa5e07c5edad51c59508597f1b3c3cb

--- a/tasks/repositories.yml
+++ b/tasks/repositories.yml
@@ -30,6 +30,13 @@
         kolla_rpm_setup_config:
           - "{{ hashed_trunk_repository }}"
           - "{{ trunk_deps_repository }}"
+
+    - name: Fetch repo file
+      get_url:
+        url: "{{ item }}"
+        dest: "/etc/yum.repos.d"
+      with_items: "{{ kolla_rpm_setup_config }}"
+
   when:
     - trunk_repository is defined
     - trunk_deps_repository is defined
