--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,12 +8,13 @@ docker_config: "{{ ansible_env.HOME }}/.docker"
 docker_btrfs_volume: "/tmp/docker-btrfs"
 
 # Set up configuration
-kolla_setup_method: "source"
+kolla_setup_method: "binary"
+
+# Values for kolla_setup_method: source
 kolla_repository: "https://git.openstack.org/openstack/kolla"
-kolla_version: "master"
 kolla_tmpdir: "/tmp/kolla"
 kolla_virtualenv: "{{ kolla_tmpdir }}/.tox/build-centos-binary"
-# Packaging available soon: https://bugzilla.redhat.com/show_bug.cgi?id=1390391
+# Values for kolla_setup_method: binary
 kolla_package: "openstack-kolla"
 
 # RDO configuration
