Install kolla from RPM, not git
The openstack-kolla package now exists so a binary install can become
the default instead of source.

Change-Id: I2dad8c024aa5e07c5edad51c59508597f1b3c3cb

--- a/tasks/build.yml
+++ b/tasks/build.yml
@@ -16,5 +16,5 @@
 
 - name: "Build image: {{ image }}"
   command: >
-    {{ kolla_virtualenv }}/bin/kolla-build {{ image }} \
+    {{ kolla_build }} {{ image }} \
       --config-file={{ kolla_tmpdir }}/kolla-build.conf
