--- a/tasks/repositories.yml
+++ b/tasks/repositories.yml
@@ -25,6 +25,18 @@
         version_hash: "{{ baseurl.stdout.split('/')[-1] }}"
         hashed_trunk_repository: "{{ baseurl.stdout }}/delorean.repo"
 
+    - name: Fetch repo file
+      get_url:
+        url: "{{ hashed_trunk_repository }}"
+        dest: "/etc/yum.repos.d"
+
+    - name: ls yum repos
+      command: "ls -l /etc/yum.repos.d"
+      register: ls_yum
+
+    - debug:
+      msg: "{{ ls_yum }}"
+
     - name: Configure Kolla repository parameters
       set_fact:
         kolla_rpm_setup_config:
