Switch to overlay driver for building images
There is an attempt to standardise on the overlay driver in CI[1] so
lets try it here too.

btrfs is left as an option if it still has stability or speed
advantages.

Docker daemon option --selinux-enabled is removed so that selinux is
disabled inside the build containers, which is the currently
recommended setup for running the overlay graph driver [2]

[1] https://review.openstack.org/#/c/451916
[2] https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/html/7.2_Release_Notes/technology-preview-file_systems.html

Change-Id: I26b468807d74168fdd5c27fbd5b358ec2a48979c

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,6 +5,11 @@
 # will fetch the variable from the local machine, we're interested in the
 # remote machine home directory.
 docker_config: "{{ ansible_env.HOME }}/.docker"
+
+# Set up storage, overlay or btrfs
+docker_storage_driver: overlay
+
+# Values for docker_storage_driver: btrfs
 docker_btrfs_volume: "/tmp/docker-btrfs"
 
 # Set up configuration
