Switch to overlay driver for building images
There is an attempt to standardise on the overlay driver in CI[1] so
lets try it here too.

btrfs is left as an option if it still has stability or speed
advantages.

Docker daemon option --selinux-enabled is removed so that selinux is
disabled inside the build containers, which is the currently
recommended setup for running the overlay graph driver [2]

[1] https://review.openstack.org/#/c/451916
[2] https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/html/7.2_Release_Notes/technology-preview-file_systems.html

Change-Id: I26b468807d74168fdd5c27fbd5b358ec2a48979c

--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -14,6 +14,16 @@
 #   under the License.
 #
 
+- name: Delete /var/lib/docker to allow switching storage driver
+  file:
+    path: "/var/lib/docker"
+    state: "absent"
+
+- name: Pre-create or ensure /var/lib/docker exists
+  file:
+    path: "/var/lib/docker"
+    state: "directory"
+
 - name: Check if Docker btrfs device file already exists
   stat:
     path: "{{ docker_btrfs_volume }}"
@@ -40,18 +50,13 @@
         fstype: "btrfs"
         opts: -f
 
-    - name: Pre-create or ensure /var/lib/docker exists
-      file:
-        path: "/var/lib/docker"
-        state: "directory"
-
     - name: Mount the btrfs device to /var/lib/docker
       mount:
         name: "/var/lib/docker"
         src: "{{ btrfs_device.stdout }}"
         fstype: "btrfs"
         state: "mounted"
-  when: not docker_btrfs.stat.exists
+  when: docker_storage_driver == "btrfs" and not docker_btrfs.stat.exists
 
 # python-docker-py is required so we can leverage Ansible docker modules
 - name: Install docker and docker-py
@@ -70,10 +75,16 @@
   register: docker_network
 
 - name: Specify storage options
-  copy:
+  template:
     src: "docker-storage"
     dest: "/etc/sysconfig/docker-storage"
   register: docker_storage
+
+- name: Remove --selinux-enabled from /etc/sysconfig/docker
+  lineinfile:
+    dest: "/etc/sysconfig/docker"
+    regexp: "^OPTIONS="
+    line: "OPTIONS='--log-driver=journald --signature-verification=false'"
 
 - name: Reload systemctl
   command: systemctl daemon-reload
