Use fallocate instead of dd for btrfs file init
dd /dev/zero is taking 3 minutes of the gate job, fallocate should be
much faster.

Change-Id: I11765fced70d5004b9343beef9ad980c8da2f3ad

--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -21,7 +21,7 @@
 
 - block:
     - name: Set up file for Docker btrfs device
-      command: dd if=/dev/zero of={{ docker_btrfs_volume }} bs=1M count=20480
+      command: fallocate -l 20480M {{ docker_btrfs_volume }}
 
     - name: Set up loopback device
       command: losetup -f {{ docker_btrfs_volume }}
