Use packaged overrides file
tripleo-common/container-images/tripleo_kolla_template_overrides.j2 is
the one location where tripleo customisations should be specified, so
this change uses tripleo_kolla_template_overrides.j2 in the template
overrides, and keeps template-overrides.j2 to apply the build labels.

Change-Id: I62e5a2b611efb598f711df4d5fa426972caa04ee

--- a/tasks/kolla.yml
+++ b/tasks/kolla.yml
@@ -93,6 +93,11 @@
     src: "kolla-build.conf.j2"
     dest: "{{ kolla_tmpdir }}/kolla-build.conf"
 
+- name: Install tripleo-common
+  package:
+    name: "tripleo-common"
+    state: "present"
+
 - name: Set up template-overrides.j2
   template:
     src: "template-overrides.j2"
