Use packaged overrides file
tripleo-common/container-images/tripleo_kolla_template_overrides.j2 is
the one location where tripleo customisations should be specified, so
this change uses tripleo_kolla_template_overrides.j2 in the template
overrides, and keeps template-overrides.j2 to apply the build labels.

Change-Id: I62e5a2b611efb598f711df4d5fa426972caa04ee

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -39,7 +39,7 @@ kolla_namespace: "rdoproject"
 kolla_retries: 3
 kolla_tag: "latest"
 kolla_template_only: "false"
-kolla_template_override: "{{ kolla_tmpdir }}/template-overrides.j2"
+kolla_template_override: "/usr/share/tripleo-common/container-images/tripleo_kolla_template_overrides.j2"
 kolla_threads: 8
 kolla_timeout: 120
 
