We don't need to try and pattern match the image names
The image might end up being pre-fixed by a registry, for example,
so it's not necessary to try and pattern match it.

Change-Id: I5a8e0e6b4dafefb2c25351deea00a65429dd047c

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -80,8 +80,7 @@
     # https://docs.docker.com/engine/reference/commandline/images/#/formatting
     - name: Retrieve list of built images
       shell: >
-        docker images {{ kolla_namespace }}/centos-binary* \
-          --format "{{ '{{' }}.Repository{{ '}}' }}" \
+        docker images --format "{{ '{{' }}.Repository{{ '}}' }}" \
           --filter "label=build_id={{ build_id }}"
       register: built_images
       tags:
