Move the systemctl reload and docker restart to a handler
Change-Id: I5a4f860eb97ac75be1307877148822501ffcaa52

--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -67,19 +67,23 @@
   copy:
     src: "docker-network"
     dest: "/etc/sysconfig/docker-network"
-  register: docker_network
+  notify:
+    - Reload and restart docker
 
 - name: Specify storage options
   template:
     src: "docker-storage"
     dest: "/etc/sysconfig/docker-storage"
-  register: docker_storage
+  notify:
+    - Reload and restart docker
 
 - name: Remove --selinux-enabled from /etc/sysconfig/docker
   lineinfile:
     dest: "/etc/sysconfig/docker"
     regexp: "^OPTIONS="
     line: "OPTIONS='--log-driver=journald --signature-verification=false'"
+  notify:
+    - Reload and restart docker
 
 - name: Set up insecure registry
   lineinfile:
@@ -87,10 +91,11 @@
     regexp: "^INSECURE_REGISTRY="
     line: "INSECURE_REGISTRY='--insecure-registry {{ kolla_registry }}'"
   when: kolla_insecure_registry
+  notify:
+    - Reload and restart docker
 
-- name: Reload systemctl
-  command: systemctl daemon-reload
-  when: docker_network.changed or docker_storage.changed
+- name: Flush handlers
+  meta: flush_handlers
 
 - name: Enable and start Docker
   service:
