Update default maintainer and namespace for TripleO
Change-Id: I0c195e80e53dc1fa4c5d6a7cda031f8a77139b5e

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -38,8 +38,8 @@ kolla_base_tag: "latest"
 kolla_debug: "false"
 kolla_install_type: "binary"
 kolla_logs_dir:
-kolla_maintainer: "RDO Project (https://rdoproject.org)"
-kolla_namespace: "rdoproject"
+kolla_maintainer: "TripleO Project (http://tripleo.org)"
+kolla_namespace: "tripleo"
 kolla_retries: 3
 kolla_tag: "latest"
 kolla_template_only: "false"
