Bundle packages in order to install them in the same transaction
The Ansible package module now supports being passed a list of
packages and it will install all of them inside the same transaction
instead of using with_items which yields N transactions for N items.

This speeds up the package installations.

Change-Id: Ie679bd15d6178cf5c250bc0fd549a07cb4efb9e5

--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -55,12 +55,13 @@
 
 # python-docker-py is required so we can leverage Ansible docker modules
 - name: Install docker and docker-py
+  vars:
+    packages:
+      - docker
+      - python-docker-py
   package:
-    name: "{{ item }}"
+    name: "{{ packages }}"
     state: "present"
-  with_items:
-    - docker
-    - python-docker-py
 
 # Workaround Docker MTU issue https://bugs.launchpad.net/kolla-ansible/+bug/1654395
 - name: Override Docker defaults to include MTU parameter
