--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -67,12 +67,19 @@
     - build
     - push
 
+# The with_items inline jinja provides the ability to use either a list format
+# or a comma-separated list of values interchangeably.
 - name: Build images
   vars:
     image: "{{ item }}"
   include: build.yml
   static: no
-  with_items: "{{ kolla_rdo_images }}"
+  with_items: >
+    {%- if kolla_rdo_images is iterable and kolla_rdo_images is not string %}
+    {{- kolla_rdo_images -}}
+    {%- else %}
+    {{- kolla_rdo_images.split(',') -}}
+    {%- endif %}
   when: kolla_build | bool
   tags:
     - build
