--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -49,6 +49,51 @@
     - build
     - push
 
+# This block parses the container-images/overcloud_containers.yaml file
+# provided by tripleo-common. It is the default if kolla_rdo_images is not set.
+# It boils down to
+# - Removing the prefix: the namespace and the "centos-binary-"
+# - Removing the suffix, for example ":latest"
+- block:
+    - name: Create temporary file for parsed containers
+      tempfile:
+        state: file
+        suffix: kolla-build
+      register: tmpfile
+
+    - name: Adjust permissions on parsed containers file
+      file:
+        path: "{{ tmpfile.path }}"
+        mode: "0755"
+
+    - name: Load supported containers
+      slurp:
+        src: "{{ tripleo_containers }}"
+      register: supported_containers
+
+    - name: Parse supported containers
+      vars:
+       containers: "{{ supported_containers.content | b64decode | from_yaml }}"
+      template:
+        src: parsed_containers.j2
+        dest: "{{ tmpfile.path }}"
+
+    - name: Load parsed containers
+      slurp:
+        src: "{{ tmpfile.path }}"
+      register: parsed_containers
+
+    - debug:
+        msg: "{{ parsed_containers.content | b64decode }}"
+
+    - name: Save parsed containers
+      vars:
+        containers: "{{ parsed_containers.content | b64decode }}"
+      set_fact:
+        kolla_rdo_images: "{{ containers.split('\n') }}"
+
+  when: kolla_rdo_images is not defined or not kolla_rdo_images
+
 - name: Record relevant variables with ARA
   ara_record:
     key: "{{ item.key }}"
