--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -49,6 +49,38 @@
     - build
     - push
 
+# This block parses the container-images/overcloud_containers.yaml file
+# provided by tripleo-common. It is the default if kolla_rdo_images is not set.
+# It boils down to
+# - Removing the prefix: the namespace and the "centos-binary-"
+# - Removing the suffix, for example ":latest"
+- block:
+    - name: Create temporary file for parsed containers
+      tempfile:
+        state: file
+        suffix: kolla-build
+      register: parsed_containers
+
+    - name: Adjust permissions on parsed containers file
+      file:
+        path: "{{ parsed_containers.path }}"
+        mode: "0755"
+
+    - name: Parse supported containers from tripleo-common
+      vars:
+       containers: "{{ lookup('file', tripleo_containers) | from_yaml }}"
+      template:
+        src: parsed_containers.j2
+        dest: "{{ parsed_containers.path }}"
+
+    - name: Load parsed containers
+      vars:
+        containers: "{{ lookup('file', parsed_containers.path) }}"
+      set_fact:
+        rdo_kolla_images: "{{ containers.split('\n') }}"
+  when: rdo_kolla_images is not defined or ( rdo_kolla_images is iterable and
+        rdo_kolla_images is not string and rdo_kolla_images | length > 0 )
+
 - name: Record relevant variables with ARA
   ara_record:
     key: "{{ item.key }}"
